# cinema-booking-system

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.Claude/: KinoMania_wymagania_funkcjonalne.md  backlog.md  commit_convention.md  m2_planning.md  m3_planning.md  m4_planning.md  m5_planning.md  tooling_stack.md  workflow_scrum_agile.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/accounts/: admin.py  emails.py  forms.py  managers.py  models.py  urls.py  views.py
apps/accounts/api/: schema.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/booking/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/booking/api/: admin.py  admin_urls.py  permissions.py  serializers.py  urls.py  viewsets.py
apps/booking/migrations/: 0001_initial.py
apps/cinema/: admin.py  forms.py  models.py  selectors.py  urls.py  utils.py  views.py
apps/cinema/api/: admin.py  admin_urls.py  filters.py  serializers.py  urls.py  validators.py  viewsets.py
apps/cinema/migrations/: 0001_initial.py  0002_actor_alter_genre_options.py  0003_director.py  0004_hall_alter_actor_full_name_alter_actor_photo.py  0005_movie.py  0006_screening.py
apps/payments/: admin.py  models.py  services.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py
deploy/: backup.sh  deploy.sh  entrypoint.sh  gunicorn.conf.py  init-letsencrypt.sh
deploy/monitoring/: blackbox.yml  prometheus.yml
deploy/nginx/: default.conf
docs/: deployment.md  security-review.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-05-04-sprint-zero-docs-bootstrap.md  2026-05-18-email-activation-flow.md  2026-05-19-seed-db-initial.md  2026-05-20-baseline-templates-and-home.md  2026-05-20-cinema-admin.md  2026-05-20-cinema-models.md  2026-05-20-seed-db-movies.md  2026-05-21-auth-redesign.md  2026-05-21-cinema-city-style-redesign.md  2026-05-21-movie-detail.md  2026-05-21-movie-list-filtering.md  2026-05-21-movie-list.md  2026-05-21-screening-list.md  2026-05-21-us17-performance-pass.md  2026-05-22-us18-booking-models.md  2026-05-23-us19-booking-form.md  2026-05-23-us20-booking-create.md  2026-05-23-us21-booking-detail.md  2026-05-23-us22-my-bookings.md  2026-05-23-us23-booking-cancel.md  2026-05-24-us24-stripe-checkout.md  2026-05-24-us25-stripe-webhook.md  2026-05-24-us26-expire-pending.md  2026-05-24-us27-refund.md  2026-05-24-us28-booking-admin.md  2026-05-24-us29-drf-setup.md  2026-05-24-us30-auth-api.md  2026-05-24-us31-public-api.md  2026-05-24-us32-booking-api.md  2026-05-25-us33-checkout-webhook.md  2026-05-25-us34-admin-api.md  2026-05-25-us35-openapi.md  2026-05-25-us36-throttling.md  2026-05-25-us37-i18n-setup.md  2026-05-25-us38-translations.md  2026-05-25-us39-error-pages.md  2026-05-25-us40-query-audit.md  2026-05-26-ui-redesign-handoff.md  2026-05-26-us41-readme-rewrite.md  2026-05-26-us42-security-review.md  (+3 more)
docs/superpowers/specs/: 2026-05-04-requirements-rework-design.md  2026-05-18-email-activation-flow-design.md  2026-05-19-seed-db-initial-design.md  2026-05-20-baseline-templates-and-home-design.md  2026-05-20-cinema-models-design.md  2026-05-21-auth-redesign.md  2026-05-21-cinema-city-style-redesign.md  2026-05-21-movie-detail-design.md  2026-05-21-movie-list-design.md  2026-05-21-movie-list-filtering-design.md  2026-05-21-screening-list-design.md  2026-05-21-us17-performance-pass.md  2026-05-22-us18-booking-models.md  2026-05-23-us19-booking-form.md  2026-05-23-us20-booking-create-design.md  2026-05-23-us21-booking-detail.md  2026-05-23-us22-my-bookings.md  2026-05-23-us23-booking-cancel.md  2026-05-24-us24-stripe-checkout-design.md  2026-05-24-us25-stripe-webhook-design.md  2026-05-24-us26-expire-pending.md  2026-05-24-us27-refund.md  2026-05-24-us28-booking-admin.md  2026-05-24-us29-drf-setup-design.md  2026-05-24-us30-auth-api-design.md  2026-05-24-us31-public-api-design.md  2026-05-24-us32-booking-api-design.md  2026-05-25-us33-checkout-webhook-design.md  2026-05-25-us34-admin-api-design.md  2026-05-25-us35-openapi-design.md  (+11 more)
settings/: api_urls.py  asgi.py  base.py  dev.py  prod.py  urls.py  wsgi.py
static/css/: addons.css  components.css  theme.css
templates/: 403.html  404.html  500.html  base.html
templates/_partials/: booking_badge.html
templates/accounts/: _auth_base.html  activation_invalid.html  activation_sent.html  login.html  register.html  resend.html  resend_done.html
templates/booking/: booking_detail.html  booking_form.html  my_bookings.html
templates/cinema/: home.html  movie_detail.html  movie_list.html  screening_list.html
templates/errors/: _error_base.html
tests/: conftest.py  test_dev_settings.py  test_error_pages.py  test_healthz.py  test_i18n.py  test_metrics.py  test_security_settings.py  test_smoke.py
tests/accounts/: factories.py  test_activation.py  test_admin.py  test_api_auth.py  test_emails.py  test_factories.py  test_forms.py  test_login.py  test_logout.py  test_models.py  test_registration.py  test_resend.py
tests/api/: test_schema.py  test_setup.py  test_throttling.py
tests/booking/: factories.py  test_admin.py  test_api.py  test_api_admin.py  test_cancel_view.py  test_checkout_view.py  test_detail_view.py  test_expire_command.py  test_forms.py  test_models.py  test_my_bookings.py  test_refund_service.py  test_services.py  test_services_concurrency.py  test_views.py
tests/cinema/: factories.py  test_accounts_templates_regression.py  test_admin.py  test_admin_query_budgets.py  test_api_admin.py  test_api_public.py  test_base_template.py  test_home.py  test_image_validator.py  test_models.py  test_movie_detail.py  test_movie_filter_form.py  test_movie_list.py  test_screening_list.py  test_screening_methods.py  test_seed_db.py  test_youtube_embed_url.py
tests/payments/: factories.py  test_admin.py  test_models.py  test_services.py  test_webhook_service.py  test_webhook_view.py
(+21 files in other folders)
